--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <div class="title_box link_left">
                         <p>デバイス事業</p>
                         <p>電子デバイス<br> UNICORNPLUS
-                            <img src="asset/images/right_icon.svg" width="12">
+                            <img src="asset/images/right_icon.svg" width="12" height="21.8">
                         </p>
                     </div>
                     <div class="bg_opacity"></div>
@@ -39,7 +39,7 @@
                         <p>教育事業</p>
                         <p>UNICORN KIDS<br>
                             <span>INTERNATIONAL SCHOOL</span>
-                            <img src="asset/images/right_icon.svg" width="12">
+                            <img src="asset/images/right_icon.svg" width="12" height="21.8">
                         </p>
                     </div>
                     <div class="bg_opacity"></div>
