--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
         </div>
     </section>
-
+    <div class="clear"></div>
     <footer>
         <p>Copyright © UNICORNPLUS LLC</p>
     </footer>
