--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                         <p>教育事業</p>
                         <p>UNICORN KIDS<br>
                             <span>INTERNATIONAL SCHOOL</span>
-                            <img src="asset/images/right_icon.svg" width="12" height="21.8">
+                            <img src="asset/images/right_icon.svg" width="12" height="21.8"
+                                style="margin-bottom: -4px;">
                         </p>
                     </div>
                     <div class="bg_opacity"></div>
