--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div class="link_a_bg">
                     </div>
                 </a>
-                <a href="" class=" link_bg">
+                <a href="http://kids.unicornplus.co.jp/" class=" link_bg">
                     <div class="title_box link_right">
                         <p>教育事業</p>
                         <p>UNICORN KIDS<br>
