--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 
 <body>
     <section class="section_bg">
-        <!-- <div class="youtube">
-                <div id="muteYouTubeVideoPlayer" class="section_bg"></div>
-        </div> -->
+        <div class="v_color">
+        </div>
         <video autoplay muted loop id="myvideo">
             <source src="asset/video/sky.mp4">
             </source>
