--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="clear"></div>
             </div>
             <div class="index_right">
-                <a href="" class="link_bg">
+                <a href="http://electronicdevice.unicornplus.co.jp" class="link_bg">
                     <div class="title_box link_left">
                         <p>デバイス事業</p>
                         <p>電子デバイス<br> UNICORNPLUS
