--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
                 <p class="left_top">合同会社ユニコーンプラス UNICORNPLUS LLC</p>
                 <div class="border_b"></div>
                 <div class="left_down">
-                    <p class="special_title">合同会社<br>ユニコーンプラス</p>
-                    <p class="special_second">UNICORNPLUS LLC</p>
+                    <p class="special_title">UNICORNPLUS</p>
+                    <p class="special_title special_title_2">LLC</p>
+                    <p class="special_second">合同会社<br>ユニコーンプラス</p>
+                    <div class="clear"></div>
                     <p class="special_about">Copyright © UNICORNPLUS LLC</p>
                 </div>
                 <div class="clear"></div>
